--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Viliam
 email: just@vili.am
 description: > # this means to ignore newlines until "baseurl:"
-  Change yourself, change the world
+  zmeň seba, zmeníš svet
   
   
   
