--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Viliam
-email: just@vili.am
+email: viliam@brozman.sk
 description: > # this means to ignore newlines until "baseurl:"
   zmeň seba, zmeníš svet
   
@@ -39,11 +39,11 @@ analytics: UA-6810782-25
 disqus-shortname: http-vili-am
 
 #social
-facebook: http://facebook.com/justviliam
+facebook: http://facebook.com/viliammmmm
 
 #facebook like box
 #fb-app-id: 1861898717394681
-#fb-page-url: http://facebook.com/justviliam
+#fb-page-url: http://facebook.com/viliammmmm
 #fb-page-title: Viliam
 
 # Sass style
