--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ default-image: webjeda-logo-big.jpg # If there is no featured image in a post th
 #footer
 built-by: webjeda
 copyright:
-   name: webjeda
-   link: 'http://blog.webjeda.com'
+   name: Viliam
+   link: 'https://vili.am'
 
 # Build settings
 future: true
