--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Viliam
 email: viliam@brozman.sk
 description: > # this means to ignore newlines until "baseurl:"
-  zmeň seba, zmeníš svet
+  mením seba, mením svet
   
   
   
